--- a/_layouts/no-sidebar.html
+++ b/_layouts/no-sidebar.html
@@ -24,6 +24,10 @@
 						<span class="icon fa-laptop"></span>
 						{% endif %}
 
+						{% if page.active == "dproject" %}
+						<span class="icon fa-book"></span>
+						{% endif %}
+
 						{% if page.active == "productions" %}
 						<span class="icon fa-heart"></span>
 						{% endif %}
