--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 					<ul class="icons">
 						<li><a href="http://twitter.com/uscnaitheater" class="icon circle fa fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 						<li><a href="http://facebook.com/uscnaitheater" class="icon circle fa fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="http://instagram.com/uscnaitheater" class="icon circle fa fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 						<li><a href="http://github.com/uscnaitheater" class="icon circle fa fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="{{ site.baseurl }}/contact/" class="icon circle fa fa-envelope" target="_blank"><span class="label">Contact</span></a></li>	
 					</ul>
@@ -8,3 +9,8 @@
 					<ul class="copyright">
 						<li>&copy; 2016 USC NAI Theater Workshop</li><li>Design: Kenia, base by <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
+					<!-- Go to www.addthis.com/dashboard to customize your tools -->
+					<!-- Go to www.addthis.com/dashboard to customize your tools -->
+					<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57e44b55d14b8299">
+					</script>
+
