fix broken images, add a new page + header

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>USC NAI Theater Workshop</title>
 		{% include css_header.html %}
@@ -17,11 +17,14 @@
 				<section id="banner">
 					<ul class="cb-slideshow">
 						<li><span>Image 01</span></li>
+            		  	<!--
+            		  	hiding these so the middlemarch banner shows nicely
             		  	<li><span>Image 02</span></li>
             		  	<li><span>Image 03</span></li>
             		 	<li><span>Image 04</span></li>
             		  	<li><span>Image 05</span></li>
-            		  	<li><span>Image 06</span></li>
+            		  	<li><span>Image 06</span></li> 
+            		     -->
             		</ul>
 					<!--
 						".inner" is set up as an inline-block so it automatically expands
@@ -30,14 +33,14 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-
 						<header>
 							<h2>USC NAI <br> Theater Workshop</h2>
 						</header>
 						<p>Bringing Literature to Life</p>
 						<footer>
 							<ul class="buttons vertical">
-								<li><a href="#main" class="button small scrolly">Continue</a></li>
+								<li><a href="{{ site.baseurl }}/productions/middlemarch" class="button small scrolly">Middlemarch Info</a></li>
+								<li></li>
 							</ul>
 						</footer>
 
@@ -108,14 +111,14 @@
 												fjs.parentNode.insertBefore(js, fjs);
 											}(document, 'script', 'facebook-jssdk'));
 											</script>
-											<div class="fb-page" data-href="https://www.facebook.com/uscnaitheater" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-width="400px" data-height"500px" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/uscnaitheater" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/uscnaitheater">USC NAI Theater Workshop</a></blockquote></div>
+											<div class="fb-page" data-href="https://www.facebook.com/uscnaitheater" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-width="400px" data-height="500px" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/uscnaitheater" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/uscnaitheater">USC NAI Theater Workshop</a></blockquote></div>
 								</div>
 								<!--not sure if this will be needed
 								    <footer>
 										<ul class="buttons">
 											<li><a href="#" class="button">Find Out More</a></li>
 										</ul>
-									</footer> -->
+									</footer>-->
 								<div class="6u 12u(narrower)">
 									<h2><strong>Twitter Feed</strong></h2>
 									<a class="twitter-timeline"
