--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
 								<a href="{{ site.baseurl }}/dickensproject/">NAI-Dickens Project</a>
 								<ul>
 									<li><a href="https://naidickens.blogspot.com" target="_blank">NAI @ Dickens</a></li>
-									<li><a href="http://middlelab.blogspot.com/" target="_blank">MiddleLab</a></li>
+									<li><a href="http://middlelab.uscnaitheater.me" target="_blank">MiddleLab</a></li>
 									<li><a href="http://dickens.ucsc.edu/" target="_blank">The Dickens Project</a></li>
 								</ul>
 							</li>
@@ -46,7 +46,7 @@
 								<a href="{{ site.baseurl }}/dickensproject/">NAI-Dickens Project</a>
 								<ul>
 									<li><a href="https://naidickens.blogspot.com" target="_blank">NAI @ Dickens</a></li>
-									<li><a href="http://middlelab.blogspot.com/" target="_blank">MiddleLab</a></li>
+									<li><a href="http://middlelab.uscnaitheater.me" target="_blank">MiddleLab</a></li>
 									<li><a href="http://dickens.ucsc.edu/" target="_blank">The Dickens Project</a></li>
 								</ul>
 							</li>
@@ -57,6 +57,7 @@
 								<a href="{{ site.baseurl }}/productions/">Productions</a>
 								<ul>
 									<li><a href="{{ site.baseurl }}/productions/dombey">Dombey & Son</a></li>
+									<li><a href="{{ site.baseurl }}/productions/middlemarch">Middlemarch</a></li>
 								</ul>
 							</li>
 							{% else %}
@@ -64,6 +65,7 @@
 								<a href="{{ site.baseurl }}/productions/">Productions</a>
 								<ul>
 									<li><a href="{{ site.baseurl }}/productions/dombey">Dombey & Son</a></li>
+									<li><a href="{{ site.baseurl }}/productions/middlemarch">Middlemarch</a></li>
 								</ul>
 							</li>
 							{% endif %}
