add feed links in case they break

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -101,7 +101,7 @@
 						<section class="wrapper style2 container special-alt">
 							<div class="row 50%">
 								<div class="6u 12u(narrower)">
-											<h2><strong>Facebook Feed</strong></h2>
+											<h2><strong><a href="http://facebook.com/uscnaitheater" target="_blank">Facebook Feed</a></strong></h2>
 											<div id="fb-root"></div>
 											<script>(function(d, s, id) {
 												var js, fjs = d.getElementsByTagName(s)[0];
@@ -120,7 +120,7 @@
 										</ul>
 									</footer>-->
 								<div class="6u 12u(narrower)">
-									<h2><strong>Twitter Feed</strong></h2>
+									<h2><strong><a href="http://twitter.com/uscnaitheater" target="_blank">Twitter Feed</a></strong></h2>
 									<a class="twitter-timeline"
 									 href="https://twitter.com/USCNAITheater" 
 									 data-widget-id="509125172473769984"
